--- a/.github/workflows/to_S3.yml
+++ b/.github/workflows/to_S3.yml
@@ -10,7 +10,35 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.head_commit.message, 'Publish to CDN')
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Fetch commit history
+        run: git fetch --all --tags
+      - name: Setup Log File
+        run: |          
+          START_TIME=$(date -u +"%s")
+          echo "START_TIME=$START_TIME" >> $GITHUB_ENV
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      - name: Install Node Modules
+        run: |
+          mkdir -p node_modules
+          npm install aws-sdk firebase web-push webpack webpack-cli clean-webpack-plugin html-webpack-plugin webpack-pwa-manifest workbox-webpack-plugin terser-webpack-plugin   
+      - name: Run Webpack Production Build
+        id: webpack
+        run: |
+          node bundle.js true
+      - name: Commit Changes
+        run: |
+          git config --global user.name 'github-actions'
+          git config --global user.email 'github-actions@github.com'
+          git add ./dist
+          git commit -m "/dist updated at $(date) [skip ci]" || echo "No changes to commit"
+          git push
 
       # Upload JS Current to S3
       - name: Upload JS to S3
@@ -18,7 +46,7 @@ jobs:
         with:
           args: --acl public-read
         env:
-          FILE: ./dist/mapboxgl-geoflo.min.js
+          FILE: ./dist/geoflo-sdk.min.js
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
@@ -30,7 +58,7 @@ jobs:
         with:
           args: --acl public-read
         env:
-          FILE: ./dist/mapboxgl-geoflo.css
+          FILE: ./dist/geoflo-sdk.css
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
