--- a/.github/workflows/to_S3.yml
+++ b/.github/workflows/to_S3.yml
@@ -30,45 +30,32 @@ jobs:
       - name: Install Node Modules
         run: |
           mkdir -p node_modules
-          npm install webpack webpack-cli terser-webpack-plugin   
+          npm install webpack webpack-cli terser-webpack-plugin jsdoc tui-jsdoc-template
       - name: Run Webpack Production Build
         id: webpack
         run: |
-          node bundle.js false
           node bundle.js true
+      - name: Generate Documentation
+        run: |
+          npx jsdoc -c ./jsdoc.config.json
       - name: Commit Changes
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
-          git add ./dist
-          git commit -m "/dist updated at $(date) [skip ci]" || echo "No changes to commit"
+          git add ./dist ./docs
+          git commit -m "Updated dist and docs at $(date) [skip ci]" || echo "No changes to commit"
           git push
-
-      # Upload JS Current to S3
-      - name: Upload JS to S3
+      - name: Upload Dist to S3
         uses: tpaschalis/s3-sync-action@master
         with:
           args: --acl public-read
         env:
-          FILE: ./dist/geoflo-sdk.min.js
+          SOURCE_DIR: ./dist
+          DEST_DIR: sdk/
           AWS_REGION: "us-east-1"
-          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
+          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
-
-      # Upload CSS to S3
-      - name: Upload CSS to S3
-        uses: tpaschalis/s3-sync-action@master
-        with:
-          args: --acl public-read
-        env:
-          FILE: ./dist/geoflo-sdk.css
-          AWS_REGION: "us-east-1"
-          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
-
-      # Invalidate CloudFront
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@v2
         env:
