--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -12,9 +12,9 @@
 		"tutorials": "./docs/tutorials"
 	},
 	"source": {
-		"include": [ "./index.js", "./src/" ],
+		"include": [ "./index.js", "./src" ],
 		"includePattern": ".+\\.js(doc|x)?$",
-		"excludePattern": "node_modules"
+		"excludePattern": "(^|/)node_modules/"
 	},
 	"sourceType": "module",
 	"tags": {
