Update JSDoc configuration and dependencies for improved documentation

--- a/.github/workflows/to_S3.yml
+++ b/.github/workflows/to_S3.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Node Modules
         run: |
           mkdir -p node_modules
-          npm install webpack webpack-cli terser-webpack-plugin jsdoc tui-jsdoc-template taffydb
+          npm install webpack webpack-cli terser-webpack-plugin jsdoc tui-jsdoc-template better-docs taffydb 
       - name: Run Webpack Production Build
         id: webpack
         run: |
