--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,9 +44,12 @@ jobs:
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@github.com'
+          git fetch origin main
+          git checkout main
+          git pull origin main
           git add ./dev ./dist ./docs
           git commit -m "Updated at $(date) [skip ci]" || echo "No changes to commit"
-          git push
+          git push origin main
       - name: Upload Development to S3
         uses: tpaschalis/s3-sync-action@master
         with:
@@ -106,4 +109,4 @@ jobs:
       - name: Publish to GitHub Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
