--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "publishConfig": {
-    "@solutegrate:registry": "https://npm.pkg.github.com"
+    "@solutegrate:registry": "https://npm.pkg.github.com",
+    "access": "public"
   },
   "repository": {
     "type": "git",
