--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "MapboxGL Wrapper for Professional Geospatial Management",
   "main": "dist/geoflo-sdk.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "build:dev": "NODE_ENV=development webpack --config webpack.config.js",
+    "build:prod": "NODE_ENV=production webpack --config webpack.config.js",
+    "clean": "rm -rf dist dev docs",
+    "lint": "eslint .",
+    "test": "jest --coverage",
+    "prepare": "npm run build:dev && npm run build:prod"
   },
   "publishConfig": {
     "@solutegrate:registry": "https://npm.pkg.github.com",
@@ -45,12 +50,28 @@
     "jszip": "^3.10.1",
     "@mapbox/leaflet-omnivore": "0.3.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.8.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "mini-css-extract-plugin": "^2.7.6",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0",
+    "better-docs": "^2.3.2",
+    "jsdoc": "^4.0.2",
+    "webpack-obfuscator": "^3.6.0"
+  },
   "peerDependencies": {
     "mapbox-gl": "^3.3.0"
   },
   "files": [
     "dist",
-    "dev"
-  ]
+    "dev",
+    "docs"
+  ],
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
