--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,33 +18,42 @@ jobs:
         with:
           fetch-depth: 0
           ref: main
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
+
       - name: Install Dependencies
         run: npm ci
+
+      - name: Get Version
+        id: get_version
+        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
+
       - name: Upload Production to S3
         uses: tpaschalis/s3-sync-action@master
         with:
           args: --acl public-read
         env:
-          FILE: ./dist/geoflo-sdk.min.js
+          FILE: ./dist/geoflo-sdk-v${{ env.VERSION }}.min.js
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
+
       - name: Upload CSS to S3
         uses: tpaschalis/s3-sync-action@master
         with:
           args: --acl public-read
         env:
-          FILE: ./dist/geoflo-sdk.css
+          FILE: ./dist/geoflo-sdk-v${{ env.VERSION }}.css
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
+
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@v2
         env:
@@ -53,6 +62,7 @@ jobs:
           AWS_REGION: "us-east-1"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
+
       - name: Publish to GitHub Packages
         run: npm publish --access public
         env:
