--- a/package.json
+++ b/package.json
@@ -45,26 +45,27 @@
   },
   "homepage": "https://docs.geoflo.pro",
   "dependencies": {
-    "mapbox-gl": "^3.3.0",
-    "@turf/turf": "^6.5.0",
+    "mapbox-gl": "^3.9.3",
+    "@turf/turf": "^7.2.0",
     "jszip": "^3.10.1",
     "@mapbox/leaflet-omnivore": "0.3.4"
   },
   "devDependencies": {
-    "webpack": "^5.88.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.8.0",
-    "terser-webpack-plugin": "^5.3.9",
-    "mini-css-extract-plugin": "^2.7.6",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.51.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-merge": "^6.0.1",
+    "terser-webpack-plugin": "^5.3.11",
+    "mini-css-extract-plugin": "^2.9.2",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.19.0",
     "jest": "^29.7.0",
-    "better-docs": "^2.3.2",
-    "jsdoc": "^4.0.2",
-    "webpack-obfuscator": "^3.6.0"
+    "better-docs": "^2.7.3",
+    "jsdoc": "^4.0.4",
+    "javascript-obfuscator": "^4.1.1",
+    "webpack-obfuscator": "^3.5.1"
   },
   "peerDependencies": {
-    "mapbox-gl": "^3.3.0"
+    "mapbox-gl": "^3.9.3"
   },
   "files": [
     "dist",
