--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,24 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Debug File Access
+        run: |
+          ls -R ./webpack
+          cat ./webpack/webpack.base.js
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
+
+      - name: Clean npm Cache
+        run: npm cache clean --force
+
       - name: Install and Build
         run: |
-          npm install
+          npm ci
+
       - name: Commit Changes
         run: |
           git config --global user.name 'github-actions'
@@ -31,6 +42,7 @@ jobs:
           git add ./dist ./dev ./docs
           git commit -m "Deployed on $(date) [skip ci]" || echo "No deploy changes to commit"
           git push
+
       - name: Upload Development to S3
         uses: tpaschalis/s3-sync-action@master
         with:
@@ -41,6 +53,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
+
       - name: Upload CSS to S3
         uses: tpaschalis/s3-sync-action@master
         with:
@@ -51,6 +64,7 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET }}
+
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@v2
         env:
