Update deployment workflow to use npm install instead of npm ci for improved package management

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm ci
+          npm install
 
       - name: Commit Changes
         run: |
