Refactor deployment workflow to cache node modules and improve installation process

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,22 +18,23 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Debug File Access
-        run: |
-          ls -R ./webpack
-          cat ./webpack/webpack.base.js
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Clean npm Cache
-        run: npm cache clean --force
-
       - name: Install and Build
         run: |
-          npm install
+          npm ci
+        timeout-minutes: 10
 
       - name: Commit Changes
         run: |
