Update deployment workflow, CSS styles, and HTML script references; clean up package dependencies

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Node Modules
         run: |
           mkdir -p node_modules
-          npm ci
+          npm install
       
       - name: Webpack Dev Build
         id: webpack-dev
