--- a/docs/package.json
+++ b/docs/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
       "@docusaurus/core": "^3.7.0",
+      "@docusaurus/preset-classic": "^3.7.0",
       "@docusaurus/theme-classic": "^3.7.0"
     }
   }
