Enhance Docusaurus configuration: add timeout for build process and exclude test files from documentation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,6 +60,7 @@ jobs:
           npm run generate
 
       - name: Build Docusaurus Site
+        timeout-minutes: 30
         run: |
           cd docs
           npm run build
