Refactor README and code for clarity and consistency; update feature descriptions, improve initialization example, and enhance CSS styling.

--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -25,7 +25,7 @@
 		]
 	},
 	"templates": {
-		"name": "Documentation",
+		"name": "Home",
 		"footerText": "Solutegrate/GeoFlo © 2025",
 		"includeSource": false,
 		"systemName": "GeoFlo",
@@ -54,7 +54,7 @@
 			],
 			"navigation": [
 				{
-					"label": "Documentation",
+					"label": "Home",
 					"href": "index.html"
 				},
 				{
