Refactor JSDoc configuration, clean up CSS, and enhance documentation file handling

--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -12,8 +12,7 @@
 		"tutorials": "./docs/tutorials"
 	},
 	"source": {
-		"include": [ "./index.js" ],
-		"exclude": [ "./src/" ], 
+		"include": [ "./index.js", "./src/" ],
 		"includePattern": ".+\\.js(doc|x)?$",
 		"excludePattern": "(^|/)node_modules/"
 	},
