Refactor JSDoc configuration, improve feature handling, and enhance utility functions in Mesh

--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -12,7 +12,7 @@
 		"tutorials": "./docs/tutorials"
 	},
 	"source": {
-		"include": [ "./index.js", "./src/" ],
+		"include": [ "./index.js" ],
 		"includePattern": ".+\\.js(doc|x)?$",
 		"excludePattern": "(^|/)node_modules/"
 	},
