--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "homepage": "https://docs.geoflo.pro",
   "devDependencies": {
     "better-docs": "^2.7.3",
+    "tui-jsdoc-template": "^1.2.2",
     "css-loader": "7.1.2",
     "javascript-obfuscator": "^4.1.1",
     "jsdoc": "^4.0.4",
