--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://docs.geoflo.pro",
   "devDependencies": {
+    "taffydb": "^2.7.3",
     "better-docs": "^2.7.3",
     "tui-jsdoc-template": "^1.2.2",
     "css-loader": "7.1.2",
