--- a/package.json
+++ b/package.json
@@ -48,7 +48,11 @@
     "terser-webpack-plugin": "^5.3.11",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-obfuscator": "^3.5.1"
+    "webpack-obfuscator": "^3.5.1",
+    "babel-loader": "^9.2.1",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "7.26.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3"
   },
   "files": [
     "dist",
