--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,9 +64,9 @@ jobs:
       - name: Upload Development to S3
         uses: tpaschalis/s3-sync-action@master
         with:
-          args: --acl public-read
+          args: --acl public-read --recursive
         env:
-          FILE: ./dev/geoflo-sdk.js
+          FILE: ./dev/
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
