--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Upload Production to S3
         uses: tpaschalis/s3-sync-action@master
         with:
-          args: --acl public-read
+          args: --acl public-read --recursive
         env:
-          FILE: ./dist/geoflo-sdk.min.js
+          FILE: ./dist/
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
