--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           args: --acl public-read
         env:
-          FILE: ./dist/geoflo-sdk.css
+          FILE: ./dist/geoflo.css
           AWS_REGION: "us-east-1"
           AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET }}/sdk/
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY }}
