fix: rename deploy job to build and add conditional execution

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,11 @@ permissions:
   contents: write
 
 jobs:
-  deploy:
+  build:
+    if: ${{ !startsWith(github.event.head_commit.message, 'Release - v') }}
     runs-on: ubuntu-latest
     concurrency:
-      group: deploy
+      group: build
       cancel-in-progress: false
 
     steps:
