--- a/package.json
+++ b/package.json
@@ -38,22 +38,22 @@
   },
   "homepage": "https://docs.geoflo.pro",
   "devDependencies": {
-    "taffydb": "^2.7.3",
+    "@babel/core": "^7.26.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "7.26.7",
+    "babel-loader": "^9.2.1",
     "better-docs": "^2.7.3",
-    "tui-jsdoc-template": "^1.2.2",
     "css-loader": "7.1.2",
+    "html-webpack-plugin": "^5.6.3",
     "javascript-obfuscator": "^4.1.1",
     "jsdoc": "^4.0.4",
     "jsdoc-to-markdown": "^9.1.1",
+    "taffydb": "^2.7.3",
     "terser-webpack-plugin": "^5.3.11",
-    "html-webpack-plugin": "^5.6.3",
+    "tui-jsdoc-template": "^1.2.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-obfuscator": "^3.5.1",
-    "babel-loader": "^9.2.1",
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "7.26.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3"
+    "webpack-obfuscator": "^3.5.1"
   },
   "files": [
     "dist",
@@ -62,5 +62,8 @@
   ],
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "terser": "^5.38.1"
   }
 }
