refactor: update JSDoc configuration to include all JavaScript files in src directory

--- a/jsdoc.config.json
+++ b/jsdoc.config.json
@@ -13,7 +13,7 @@
     "tutorials": "./docs/tutorials"
   },
 	"source": {
-		"include": [ "./index.js", "./src/Options.js" ],
+		"include": [ "./index.js", "./src" ],
 		"includePattern": ".+\\.js(doc|x)?$",
 		"excludePattern": "(^|/)node_modules/"
 	},
